# vehicle-routing-problem

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  vrp  vrp_tests
.github/workflows/: python-api.yml  test.yml
_skbuild/linux-x86_64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeSpec.json  build.ninja  install_manifest.txt  vrp  vrp_tests
_skbuild/linux-x86_64-3.12/setuptools/lib.linux-x86_64-cpython-312/vrp_solver/: visualize.py
example/: main.py  routes.csv
include/: api_solvers.h  clarke_wright.h  create_child.h  genetic_algo_utils.h  genetic_algorithm.h  genetic_solver.h  point.h  utils.h
src/: api_solvers.cpp  bindings.cpp  clarke_wright.cpp  create_child.cpp  genetic_algo_utils.cpp  genetic_algorithm.cpp  genetic_solver.cpp  main.cpp  utils.cpp
tests/: test_clarke_wright.cpp  test_genetic_algorithm.cpp
visuals/: main.py  requirements.txt  routes copy.csv  routes.csv
vrp_solver/: __init__.py  visualize.py
vrp_solver.egg-info/: PKG-INFO  SOURCES.txt
